--- a/numbers.css
+++ b/numbers.css
@@ -25,7 +25,7 @@ table {
 
 main article {
   background: var(--color-bg2);
-	border: 1px solid var(--color-border);
+	border: 1px solid var(--color-p-a);
 	border-radius: 4px;
 	padding: 1rem;
 }
@@ -76,6 +76,10 @@ main .number.big {
   font-size: 4rem;
 }
 
+main .medal {
+  margin: 0 auto;
+}
+
 main .medal-circle {
   font-size: 2rem;
   font-weight: bold;
@@ -91,10 +95,10 @@ main .medal-circle {
   z-index: 1;
   margin: 0 auto;
 
-  box-shadow: inset 0 0 0 #a7b2b8, 2px 2px 0 rgb(0 0 0 / 8%);
-  border-color: #edeff1;
-  text-shadow: 2px 2px 0 #98a6ad;
-  background: linear-gradient(to bottom right, #d1d7da 50%, #c3cbcf 50%);
+  box-shadow: inset 0 0 0 #9ca5c3, 2px 2px 0 rgb(0 0 0 / 8%);
+  border-color: #9cb3ff;
+  text-shadow: 2px 2px 0 #9cb3ff;
+  background: linear-gradient(to bottom right, var(--color-primary) 50%, #4a6bdc 50%);
 }
 
 main .p3 .medal-circle {
@@ -118,41 +122,28 @@ main .p1 .medal-circle {
   background: linear-gradient(to bottom right, #f9ad0e 50%, #e89f06 50%);
 }
 
+main .medal-ribbon {
+  display: block;
+  position: absolute;
+  border-style: solid;
+  border-width: 6px 10px;
+  width: 0;
+  height: 20px;
+  top: 50px;
+}
+
+main .medal-ribbon-left {
+  border-color: #FC402D #FC402D transparent #FC402D;
+  left: 8px;
+  transform: rotate(20deg) translateZ(-32px);
+}
+
 main .learn-more {
   color: var(--color-primary);
   font-weight: 600;
   text-transform: uppercase;
   text-align: right;
   display: block;
-}
-
-.number_text {
-  text-align: left;
-  margin: 0px 70px;
-  padding-bottom: 20px;
-}
-
-.learn_more {
-  display: inline-block;
-  background-color: whitesmoke;
-  color: rgba(0, 168, 255, 0.75);
-  padding-right: 5px;
-  padding-left: 5px;
-  padding-bottom: 2px;
-  border: 1px solid rgba(0, 168, 255, 0.75);
-  border-radius: 8px;
-  margin-right: auto;
-  float: right;
-  line-height: normal;
-}
-
-.learn_more:hover {
-  color: whitesmoke;
-  background-color: rgba(0, 168, 255, 0.75);
-}
-
-.blue {
-  color: rgba(0, 168, 255, 0.75);
 }
 
 #return {
@@ -163,96 +154,4 @@ main .learn-more {
 #rickroll {
   text-decoration: none;
   color: rgba(0, 168, 255, 0.75);
-}
-
-@media only screen and (max-width: 600px) {
-  h1 {
-    font-size: xx-large;
-  }
-
-  h5 {
-    font-size: x-large;
-    margin-left: 0;
-  }
-
-  .body {
-    width: 100%;
-  }
-
-  .number_text {
-    margin: 0px 10px;
-    padding: 0px 10px;
-  }
-
-  p {
-    padding: 0px 10px;
-  }
-
-  caption {
-    padding: 0px 10px;
-  }
-
-  table {
-    margin-right: auto;
-    border-collapse: separate;
-    border-spacing: 20px;
-  }
-
-  td:nth-child(3n+1),
-  th:nth-child(3n+1) {
-    color: rgba(0, 168, 255, 0.75);
-    padding: 16px 32px;
-    font-size: x-large;
-    font-weight: 900;
-    background-color: whitesmoke;
-    border: 1px solid rgba(0, 168, 255, 0.75);
-    background-size: contain;
-    width: 60px;
-  }
-}
-
-@media only screen and (max-width: 1000px) and (min-width: 600px) {
-  h1 {
-    font-size: 50px;
-  }
-
-  h5 {
-    font-size: x-large;
-    margin-left: 0;
-  }
-
-  .body {
-    width: 80%;
-  }
-
-  caption {
-    padding: 0px 10px;
-  }
-
-  .number_text {
-    margin: 0px 10px;
-    padding: 0px 10px;
-  }
-
-  p {
-    padding: 0px 10px;
-  }
-
-  table {
-    margin-right: auto;
-    border-collapse: separate;
-    border-spacing: 40px 20px;
-  }
-
-  td:nth-child(3n+1),
-  th:nth-child(3n+1) {
-    color: rgba(0, 168, 255, 0.75);
-    padding: 16px 32px;
-    font-size: xx-large;
-    font-weight: 900;
-    background-color: whitesmoke;
-    border: 1px solid rgba(0, 168, 255, 0.75);
-    background-size: contain;
-    width: 60px;
-  }
 }
