--- a/styles/kontakt.css
+++ b/styles/kontakt.css
@@ -1,6 +1,6 @@
 main > section {
-	background: var(--color-bg2);
-	border: 1px solid var(--color-border);
+	background: var(--color-bg2-a);
+	border: 1px solid var(--color-p-a);
 	border-radius: 4px;
 	padding: 1rem;
 }
