--- a/styles/global.css
+++ b/styles/global.css
@@ -119,6 +119,11 @@ summary {
 	padding: 1rem;
 }
 
+a.underline{
+	color: var(--color-s);
+	text-decoration: underline; 
+}
+
 #header-wrapper {
   width: 100%;
   z-index: 32;
