--- a/numbers.css
+++ b/numbers.css
@@ -1,21 +1,3 @@
-main .heading {
-  margin-bottom: 4rem;
-}
-
-main .heading>* {
-  color: whitesmoke;
-  margin: 0;
-}
-
-main .heading h1 {
-  font-size: 3.5rem;
-}
-
-main .heading h2 {
-  font-size: 2rem;
-}
-
-
 table {
   width: 60%;
   margin-left: auto;
@@ -28,6 +10,7 @@ table {
 thead {
   border-bottom: solid 1px var(--color-p-a);
   background-color: var(--color-primary);
+  font-weight: bold;
 }
 
 tbody > tr {
@@ -53,18 +36,9 @@ th {
   text-align: right;
 }
 
-main h3 {
-  text-align: center;
-}
-
 main section {
   max-width: 960px;
   margin: 4rem auto;
-}
-
-main hr {
-  margin: 2rem 0;
-  border-color: var(--color-primary);
 }
 
 main p {
