--- a/styles/global.css
+++ b/styles/global.css
@@ -71,10 +71,6 @@ a {
   color: var(--color-p);
 }
 
-a:hover {
-  color: var(--color-s);
-}
-
 /* Remove 000webhost overlay */
 a[href^="https://www.000webhost.com"] {
   display: none;
@@ -300,6 +296,10 @@ footer .social-icons a {
 
 footer .social-icons a img {
   display: block;
+}
+
+footer a:hover {
+  color: var(--color-s);
 }
 
 .bottom-navigation {
