--- a/vines.css
+++ b/vines.css
@@ -1,20 +1,13 @@
-h1, h5 {
-    text-shadow: none;
-    color: whitesmoke;
-    text-align: left;
-    margin: 0;
-}
-h5 {
-    font-weight: 500;
-    margin-left: 10px;
-}
-
 .head {
     font-size: 40px;
     width:fit-content;
     margin-right: auto;
     margin-bottom: 50px;
     
+}
+
+h3 {
+    text-align: center;
 }
 
 iframe {
@@ -48,6 +41,9 @@ figure {
 }
 
 @media screen and (max-width: 1075px) {
+    .gallery {
+        text-align: center;
+    }
     .vine {
         margin-left: auto;
         margin-right: auto;
