--- a/vines.css
+++ b/vines.css
@@ -30,9 +30,12 @@ figure {
 }
 
 .vine {
+    padding: 5px;
+}
+
+.vine:nth-child(2n+1) {
     margin-left: 10px;
     margin-right: auto;
-    padding: 5px;
 }
 .vine:nth-child(2n) {
     text-align: right;
@@ -48,14 +51,20 @@ figure {
         margin-left: auto;
         margin-right: auto;
     }
-    .vine:nth-child(2n) {
+    .vine:nth-child(2n), .vine:nth-child(2n+1) {
         margin-left: auto;
         margin-right: auto;
         padding: 5px;
         text-align: left;
     }
 }
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
+    main > .heading > h1 {
+        font-size: 40px;
+    }
+    main > .heading > h2 {
+        font-size: x-large;
+    }
     .vine {
         width: 300px;
         height: auto;
