--- a/numbers.css
+++ b/numbers.css
@@ -167,9 +167,15 @@ main .learn-more {
 
 @media only screen and (max-width: 600px) {
   .heading > h1 {
-      font-size: 40px;
+    font-size: 40px;
   }
   .heading > h2 {
     font-size: x-large;
+  }
+  main .number {
+    font-size: 40px;
+  }
+  main .number.big {
+    font-size: 30px;
   }
 }
