--- a/vines.css
+++ b/vines.css
@@ -1,69 +1,68 @@
 .head {
-    font-size: 40px;
-    width:fit-content;
-    margin-right: auto;
-    margin-bottom: 50px;
-    
+  font-size: 40px;
+  width: fit-content;
+  margin-right: auto;
+  margin-bottom: 50px;
 }
 
 h3 {
-    text-align: center;
+  text-align: center;
 }
 
 iframe {
-    border: 0;
+  border: 0;
+}
+
+figure {
+  margin: 0;
 }
 
 figcaption {
-    margin-left: 15px;
-    margin-right: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .gallery {
-    margin-left: auto;
-    margin-right: auto;
-}
-figure {
-    padding: 10px 20px;
-    margin: 20px;
-    width:min-content;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .vine {
-    margin-left: 10px;
+  margin-right: auto;
+}
+
+.vine:nth-child(2n) {
+  text-align: right;
+  margin-left: auto;
+}
+
+/* @media screen and (max-width: 1075px) {
+  .gallery {
+    text-align: center;
+  }
+
+  .vine {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .vine:nth-child(2n) {
+    margin-left: auto;
     margin-right: auto;
     padding: 5px;
-}
-.vine:nth-child(2n) {
-    text-align: right;
-    margin-left: auto;
-    margin-right: 10px;
+    text-align: left;
+  }
+} */
+
+@media only screen and (max-width: 640px) {
+  .vine {
+    width: 100%;
+    height: auto;
+  }
 }
 
-@media screen and (max-width: 1075px) {
-    .gallery {
-        text-align: center;
-    }
-    .vine {
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .vine:nth-child(2n) {
-        margin-left: auto;
-        margin-right: auto;
-        padding: 5px;
-        text-align: left;
-    }
-}
-@media only screen and (max-width: 600px) {
-    .vine {
-        width: 300px;
-        height: auto;
-    }
-}
-
-@media screen and (max-width: 1050px) and (min-width: 1000px) {
-    .vine {
-        width: 480px;
-    }
-}
+/* @media screen and (max-width: 1050px) and (min-width: 1000px) {
+  .vine {
+    width: 480px;
+  }
+} */
