--- a/vines.css
+++ b/vines.css
@@ -47,4 +47,12 @@ figcaption {
   .vine {
     width: 100%;
   }
+  iframe {
+      width: 100%;
+      height:auto;
+  }
+  video {
+    width: 100%;
+    height: auto;
+  }
 }
