--- a/styles/formular.css
+++ b/styles/formular.css
@@ -1,3 +1,9 @@
+main .flex {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+
 main label {
 	color: var(--color-h);
 	margin-bottom: 0.5rem;
@@ -78,15 +84,14 @@ main button,
 main label,
 main select {
 	font-family: var(--font-sans);
-	font-size: 1rem;
-	
+	font-size: 1rem;	
 }
 
 main form {
 	margin: 2rem 0;
 }
 
-main a{
+main a {
 	color: var(--color-s);
 }
 
@@ -94,21 +99,34 @@ main a:hover {
 	text-decoration: underline;
 }
 
-main aside{
-	width: 30%;
-	padding: 15px;
-	margin-left: 15px;
+main aside {
 	float: right;
-	background: var(--color-primary);
+	background: var(--color-bg-aside) !important;
 	border-radius: 4px;
 }
 
-.response
-{
+main aside p {
+	color: #ccc;
+}
+
+main aside button {
+	max-width: 100%;
+}
+
+.response {
 	margin: 1rem 0;
 }
 
 @media screen and (min-width: 640px) {
+	main .flex {
+		flex-direction: row-reverse;
+	}
+
+	main aside {
+		width: 30%;
+		min-width: 256px;
+	}
+
 	main button {
 		max-width: 192px;
 	}
