--- a/styles/global.css
+++ b/styles/global.css
@@ -25,11 +25,12 @@ xl > 1536px
 :root {
   --color-primary: #6787F5;
   --color-secondary: #FF355E;
-  --color-bg: hsl(240, 7%, 97%);
-  --color-bg-a: hsl(240, 7%, 97%, 0.9);
+  --color-bg: rgb(247, 247, 248);
+  --color-bg-a: #f7f7f8e6;
   --color-bg2: #fff;
-  --color-bg2-a: #ffffff;
-  --color-bg3: hsla(223, 60%, 86%, 0.8);
+  --color-bg2-a: #fff;
+  --color-bg3: #c6d2f1cc;
+  --color-bg-aside: #081521;
 
   --color-s: #000;
   --color-h: #222;
@@ -43,11 +44,13 @@ xl > 1536px
 }
 
 :root .dark {
-  --color-bg: hsl(205, 76%, 5%);
-  --color-bg-a: hsla(205, 76%, 5%, 0.9);
-  --color-bg2: rgb(8, 21, 33);
+  --color-bg: #030e16;
+  --color-bg-a: #030e16e6;
+  --color-bg2: #081521;
   --color-bg2-a: #081521de;
-  --color-bg3: hsla(223, 90%, 12%, 0.8);
+  --color-bg3: #03133acc;
+  --color-bg-aside: #081521de;
+
   --color-s: #fff;
   --color-h: #ddd;
   --color-p: #ccc;
