Fix CSS includes

--- a/styles/formular.css
+++ b/styles/formular.css
@@ -1,10 +1,10 @@
-main img{
+main img {
 	width: 100%;
 }
 
 main .flex {
 	display: flex;
-	flex-direction: column;
+	flex-direction: column-reverse;
 	gap: 1rem;
 }
 
